--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "codo": "^2.0.11",
     "coffeeify": "^0.7.0",
     "events": "^1.0.2",
+    "object-assign": "^2.0.0",
     "semver": "^4.3.3"
   }
 }
